Settings labels vertical alignment fix

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2357,15 +2357,17 @@ input.error:focus {
     height:40px;
     .parameter-name {
       display: table-cell;
-      vertical-align: top;
-      padding: 3px 10px 0 12px;
+      vertical-align: middle;
+      padding: 0 10px 0 12px;
       max-width: 180px;
       float: none;
     }
     .parameter-control {
       display: table-cell;
+      vertical-align: middle;
       float: none;
-      padding: 2px 10px 0 0;
+      .box-sizing-mixin;
+      padding: 8px 10px 0 0;
       &.input-append {
         vertical-align: top;
         padding-top: 2px;
@@ -2373,9 +2375,9 @@ input.error:focus {
       }
     }
     .parameter-description {
-      display: table-cell;
-      vertical-align: top;
-      padding-top: 3px;
+      display: table-cell !important;
+      vertical-align: middle;
+      margin-top: 0;
       max-width: 550px;
       float: none;
     }
